added github link to main page

--- a/rentwyse-frontend/src/app/footer/footer.component.html
+++ b/rentwyse-frontend/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
         <li>To Test</li>
         <li>use : testuser1 : Password123! for user test</li>
         <li>use : testuser2 : Password123! for admin test</li>
-        <li>github : https://github.com/sodiqadesina/rentwyse </li>
+        <li><a href="https://github.com/sodiqadesina/rentwyse">github</a> </li>
         <li>Kindly allow backend server spin up ! thanks for your patience</li>
       </ul>
     </div>
