Add Google Maps integration to rentals list: extend post model with geo fields, update PostsService mapping to include lat/lng/location, rebuild map marker generation, fix map render conditions, and enable full map display on /list route

--- a/rentwyse-frontend/src/app/posts/post-list/post-list.component.html
+++ b/rentwyse-frontend/src/app/posts/post-list/post-list.component.html
@@ -17,8 +17,7 @@
           (click)="onClearFilters()"
         >
           Clear filters
-        </button>  
-
+        </button>
 
         <button
           mat-raised-button
@@ -106,6 +105,49 @@
     </div>
   </mat-card>
 
+  <!-- MAP CARD (new) -->
+  <mat-card
+    class="map-card"
+    *ngIf="!isLoading && posts && posts.length > 0 "
+  >
+    <div class="map-card-header">
+      <div>
+        <h2 class="map-title">Map view</h2>
+        <p class="map-subtitle">
+          Explore rentals on the map. Click a price pin to focus the listing.
+        </p>
+      </div>
+      <button
+        mat-stroked-button
+        type="button"
+        class="map-reset-btn"
+        (click)="fitMapToMarkers()"
+      >
+        <mat-icon>my_location</mat-icon>
+        Reset view
+      </button>
+    </div>
+
+    <div class="map-wrapper">
+      <google-map
+        height="100%"
+        width="100%"
+        [center]="mapCenter"
+        [zoom]="mapZoom"
+        [options]="mapOptions"
+      >
+        <map-marker
+          *ngFor="let marker of mapMarkers"
+          [position]="marker.position"
+          [label]="marker.label || ''"
+          [options]="marker.options || {}"
+          (mapClick)="onMarkerClick(marker.postId)"
+        >
+        </map-marker>
+      </google-map>
+    </div>
+  </mat-card>
+
   <!-- Loading -->
   <div class="loading-wrapper" *ngIf="isLoading">
     <mat-spinner diameter="50"></mat-spinner>
@@ -116,12 +158,13 @@
     class="rentals-grid"
     *ngIf="!isLoading && posts.length > 0"
   >
-      <mat-card
-        class="rental-card"
-        *ngFor="let post of posts"
-        [ngClass]="{ 'rental-card--featured': post.featured }"
-      >
-      <!--  Featured badge -->
+    <mat-card
+      class="rental-card"
+      *ngFor="let post of posts"
+      [ngClass]="{ 'rental-card--featured': post.featured }"
+      [attr.data-post-id]="post._id"
+    >
+      <!-- Featured badge -->
       <div
         class="rental-featured-banner"
         *ngIf="post.featured"
@@ -129,6 +172,7 @@
         <mat-icon>star</mat-icon>
         <span>Featured</span>
       </div>
+
       <!-- Image slider -->
       <div
         class="rental-media"
@@ -229,19 +273,21 @@
         </p>
 
         <p class="rental-description">
-          <!-- If already expanded OR description is short, show full text -->
-          <ng-container *ngIf="isDescriptionExpanded(post._id) || !isDescriptionLong(post); else truncatedDesc">
+          <ng-container
+            *ngIf="
+              isDescriptionExpanded(post._id) || !isDescriptionLong(post);
+              else truncatedDesc
+            "
+          >
             {{ post.description }}
           </ng-container>
 
-          <!-- Collapsed view for long descriptions -->
           <ng-template #truncatedDesc>
-            {{ (post.description || '') | slice:0:descriptionLimit }}
+            {{ (post.description || '') | slice: 0: descriptionLimit }}
             <span *ngIf="isDescriptionLong(post)">...</span>
           </ng-template>
         </p>
 
-        <!-- Toggle only for long descriptions -->
         <button
           *ngIf="isDescriptionLong(post)"
           type="button"
@@ -250,9 +296,6 @@
         >
           {{ isDescriptionExpanded(post._id) ? 'Show less' : 'Show more' }}
         </button>
-
-
-
 
         <div class="rental-dates">
           <span class="date-item">
@@ -267,54 +310,52 @@
       </mat-card-content>
 
       <!-- Actions -->
-    <mat-card-actions class="rental-actions">
-      <!-- Owner: manage listing -->
-      <button
-        *ngIf="userIsAuth && userId === post.creator"
-        mat-stroked-button
-        color="primary"
-        [routerLink]="['/edit', post._id]"
-      >
-        <mat-icon>edit</mat-icon>
-        My listing
-      </button>
-
-      <!-- Non-owner: either Make an inquiry or View messages -->
-      <ng-container *ngIf="userIsAuth && userId !== post.creator">
-        <!-- No conversation yet for this post -->
+      <mat-card-actions class="rental-actions">
+        <!-- Owner: manage listing -->
         <button
-          *ngIf="!hasConversationForPost(post._id)"
-          mat-raised-button
-          color="primary"
-          (click)="openInquiryDialog(post.creator, post._id, $event)"
-        >
-          <mat-icon>mail_outline</mat-icon>
-          Make an inquiry
-        </button>
-
-        <!-- Conversation exists for this post -->
-        <button
-          *ngIf="hasConversationForPost(post._id)"
+          *ngIf="userIsAuth && userId === post.creator"
           mat-stroked-button
           color="primary"
-          (click)="viewMessagesForPost(post._id)"
+          [routerLink]="['/edit', post._id]"
         >
-          <mat-icon>chat</mat-icon>
-          View messages
+          <mat-icon>edit</mat-icon>
+          My listing
         </button>
-      </ng-container>
 
-      <!-- Not logged in -->
-      <button
-        *ngIf="!userIsAuth"
-        mat-stroked-button
-        color="primary"
-        routerLink="/auth/login"
-      >
-        <mat-icon>login</mat-icon>
-        Login to inquire
-      </button>
-    </mat-card-actions>
+        <!-- Non-owner: either Make an inquiry or View messages -->
+        <ng-container *ngIf="userIsAuth && userId !== post.creator">
+          <button
+            *ngIf="!hasConversationForPost(post._id)"
+            mat-raised-button
+            color="primary"
+            (click)="openInquiryDialog(post.creator, post._id, $event)"
+          >
+            <mat-icon>mail_outline</mat-icon>
+            Make an inquiry
+          </button>
+
+          <button
+            *ngIf="hasConversationForPost(post._id)"
+            mat-stroked-button
+            color="primary"
+            (click)="viewMessagesForPost(post._id)"
+          >
+            <mat-icon>chat</mat-icon>
+            View messages
+          </button>
+        </ng-container>
+
+        <!-- Not logged in -->
+        <button
+          *ngIf="!userIsAuth"
+          mat-stroked-button
+          color="primary"
+          routerLink="/auth/login"
+        >
+          <mat-icon>login</mat-icon>
+          Login to inquire
+        </button>
+      </mat-card-actions>
     </mat-card>
   </div>
 
@@ -330,7 +371,7 @@
     </p>
   </div>
 
-   <!-- Paginator -->
+  <!-- Paginator -->
   <div
     class="paginator-wrapper"
     *ngIf="posts.length > 0"
